<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_maps">

    <keep_state_fragment
        android:id="@+id/nav_maps"
        android:name="com.example.restaurant_review.Fragments.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />

    <keep_state_fragment
        android:id="@+id/nav_home"
        android:name="com.example.restaurant_review.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <keep_state_fragment
        android:id="@+id/nav_social_media"
        android:name="com.example.restaurant_review.Fragments.SocialMediaFragment"
        android:label="@string/social_media"
        tools:layout="@layout/sm_fragment_social_media" />

    <keep_state_fragment
        android:id="@+id/nav_vr_tour"
        android:name="com.example.restaurant_review.Fragments.VRTourFragment"
        android:label="@string/vr_tour"
        tools:layout="@layout/fragment_vr_tour" />

    <keep_state_fragment
        android:id="@+id/nav_about"
        android:name="com.example.restaurant_review.Fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

</navigation>