<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_maps" />
    </group>

    <item android:title="@string/menu_about">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>

</menu>
