<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height = "wrap_content"
        android:layout_width = "match_parent"
        android:orientation = "vertical">
        <LinearLayout
            android:layout_height = "wrap_content"
            android:layout_width = "match_parent"
            android:orientation= "horizontal">
            <TextView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:minHeight="48dp"
                android:paddingVertical="@dimen/default_padding">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical = "@dimen/default_padding"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal" >
                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/add"
                    android:onClick="onChangeClicked"/>
            </LinearLayout>
        </LinearLayout>
        <!--TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingVertical = "@dimen/default_padding"
            android:text="@string/title_label">
        </TextView>
        <EditText
            android:id="@+id/smp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_default"
            android:inputType="text"
            android:minHeight="48dp"
            android:maxLength="@integer/smp_title_max_length"
            android:paddingVertical="@dimen/default_padding" /-->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingVertical = "@dimen/default_padding"
            android:text="@string/textContent">
        </TextView>
        <EditText
            android:id="@+id/smp_textContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/textContent_default"
            android:maxLength="@integer/smp_textContent_max_length"
            android:inputType="textMultiLine"
            android:minHeight="250dp"
            android:maxLines="10"
            android:paddingVertical="@dimen/default_padding"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:layout_gravity="bottom"
                android:id="@+id/smp_save_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/button_margin"
                android:id="@+id/smp_cancel_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>